# scroll-zstd-rs

./: .gitmodules  Cargo.toml
src/: dict.rs  lib.rs
src/bulk/: compressor.rs  decompressor.rs  mod.rs  tests.rs
src/stream/: functions.rs
src/stream/read/: mod.rs
src/stream/write/: mod.rs
src/stream/zio/: writer.rs
zstd-safe/: Cargo.toml
zstd-safe/src/: lib.rs
zstd-safe/zstd-sys/: Cargo.toml  build.rs  update_bindings.sh
zstd-safe/zstd-sys/patch/: zstd_compress_patch.c
zstd-safe/zstd-sys/src/: bindings_zdict.rs  bindings_zdict_experimental.rs  bindings_zstd.rs  bindings_zstd_experimental.rs  lib.rs
